--- a/autocket/package.json
+++ b/autocket/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
+    "three": "^0.176.0",
     "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
